--- a/src/LayuiAvaloniaPack/Layui.Main/Views/Message.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/Message.axaml
@@ -3,6 +3,7 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:lang="clr-namespace:Layui.Tools.Languages;assembly=Layui.Tools"
     xmlns:lay="using:LayUI.Avalonia.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
@@ -25,12 +26,12 @@
                 Background="White"
                 CornerRadius=" 0 0 2 2" />
             <StackPanel Margin="50" TextBlock.Foreground="White">
-                <TextBlock Text="{DynamicResource Message-Title}}" />
+                <TextBlock Text="{lang:Localize Message-Title}}" />
                 <TextBlock
                     Margin="0,10"
-                    Text="{DynamicResource Message-Content}"
+                    Text="{lang:Localize Message-Content}"
                     TextWrapping="Wrap" />
-                <TextBlock Text="{DynamicResource Message-Problem}" TextWrapping="Wrap" />
+                <TextBlock Text="{lang:Localize Message-Problem}" TextWrapping="Wrap" />
             </StackPanel>
             <StackPanel
                 Grid.Row="1"
@@ -42,14 +43,14 @@
                     Height="50"
                     Margin="5,0"
                     Command="{Binding GoCommand}"
-                    Content="{DynamicResource Message-Go}"
+                    Content="{lang:Localize Message-Go}"
                     Type="Normal" />
                 <lay:LayButton
                     Width="150"
                     Height="50"
                     Margin="5,0"
                     Command="{Binding CloseCommand}"
-                    Content="{DynamicResource Message-Close}" />
+                    Content="{lang:Localize Message-Close}" />
             </StackPanel>
         </Grid>
     </Border>
