调整翻译方法

--- a/src/LayuiAvaloniaPack/Layui.Main/Views/HomePage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/HomePage.axaml
@@ -145,9 +145,11 @@
                                 </Grid.ColumnDefinitions>
                                 <Grid Width="20" Height="40" />
                                 <TextBlock
+                                    Name="test"
                                     Grid.Column="1"
                                     Margin="5,10"
                                     VerticalAlignment="Center"
+                                    lang:LocalizeExtension.Tag="{Binding ElementName=test}"
                                     FontSize="20"
                                     Foreground="White"
                                     Text="{Binding Title}" />
