提交字体，解决乌班图系统启动问题

--- a/src/LayuiAvaloniaPack/Layui.Main/Views/HomePage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/HomePage.axaml
@@ -152,7 +152,7 @@
                                     lang:LocalizeExtension.Tag="{Binding ElementName=test}"
                                     FontSize="20"
                                     Foreground="White"
-                                    Text="{Binding Title}" />
+                                    Text="{lang:Localize {Binding Title}}" />
                             </Grid>
                         </RadioButton>
                     </DataTemplate>
