新增过度动画

--- a/src/LayuiAvaloniaPack/Layui.Main/Views/HomePage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/HomePage.axaml
@@ -149,10 +149,9 @@
                                     Grid.Column="1"
                                     Margin="5,10"
                                     VerticalAlignment="Center"
-                                    lang:LocalizeExtension.Tag="{Binding ElementName=test}"
                                     FontSize="20"
                                     Foreground="White"
-                                    Text="{lang:Localize {Binding Title}}" />
+                                    Text="{Binding Title}" />
                             </Grid>
                         </RadioButton>
                     </DataTemplate>
