--- a/src/LayuiAvaloniaPack/Layui.Main/Views/HomePage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/HomePage.axaml
@@ -53,7 +53,7 @@
                     MinHeight="35"
                     Background="{DynamicResource Gradient}"
                     Type="Customize"
-                    Uri="https://space.bilibili.com/48808444">
+                    Uri="https://github.com/Coolkeke/LayUI-Avalonia">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="{lang:Localize GitHub}" />
                         <Ellipse
